# Design_Patterns

./: .gitignore  CMakeLists.txt  main.cpp
FactoryPattern/include/: CheesePizza.h  JalapenoPizza.h  PepperoniPizza.h  Pizza.h  PizzaFactory.h  Restaurant.h  VeggiePizza.h
FactoryPattern/src/: CheesePizza.cpp  JalapenoPizza.cpp  PepperoniPizza.cpp  PizzaFactory.cpp  PizzaTypes.cpp  Restaurant.cpp  VeggiePizza.cpp
ObserverPattern/include/: CurrentConditionDisplay.h  ForecastDisplay.h  StatisticsDisplay.h  WeatherData.h
ObserverPattern/src/: CurrentConditionDisplay.cpp  Displays.cpp  ForecastDisplay.cpp  Observer.cpp  WeatherData.cpp
SingletonPattern/: Printer.cpp
